// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <thead
    class="rdp-head"
  >
    <tr
      class="rdp-head_row"
    >
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Su
        </span>
        <span
          class="rdp-vhidden"
        >
          Sunday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Mo
        </span>
        <span
          class="rdp-vhidden"
        >
          Monday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Tu
        </span>
        <span
          class="rdp-vhidden"
        >
          Tuesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          We
        </span>
        <span
          class="rdp-vhidden"
        >
          Wednesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Th
        </span>
        <span
          class="rdp-vhidden"
        >
          Thursday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Fr
        </span>
        <span
          class="rdp-vhidden"
        >
          Friday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Sa
        </span>
        <span
          class="rdp-vhidden"
        >
          Saturday
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    class="rdp-tbody"
  >
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            1
          </span>
          <span
            class="rdp-vhidden"
          >
            1st February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            2
          </span>
          <span
            class="rdp-vhidden"
          >
            2nd February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            3
          </span>
          <span
            class="rdp-vhidden"
          >
            3rd February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            4
          </span>
          <span
            class="rdp-vhidden"
          >
            4th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            5
          </span>
          <span
            class="rdp-vhidden"
          >
            5th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            6
          </span>
          <span
            class="rdp-vhidden"
          >
            6th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            7
          </span>
          <span
            class="rdp-vhidden"
          >
            7th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            8
          </span>
          <span
            class="rdp-vhidden"
          >
            8th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            9
          </span>
          <span
            class="rdp-vhidden"
          >
            9th February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            10
          </span>
          <span
            class="rdp-vhidden"
          >
            10th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            11
          </span>
          <span
            class="rdp-vhidden"
          >
            11th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            12
          </span>
          <span
            class="rdp-vhidden"
          >
            12th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            13
          </span>
          <span
            class="rdp-vhidden"
          >
            13th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            14
          </span>
          <span
            class="rdp-vhidden"
          >
            14th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            15
          </span>
          <span
            class="rdp-vhidden"
          >
            15th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            16
          </span>
          <span
            class="rdp-vhidden"
          >
            16th February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            17
          </span>
          <span
            class="rdp-vhidden"
          >
            17th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            18
          </span>
          <span
            class="rdp-vhidden"
          >
            18th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            19
          </span>
          <span
            class="rdp-vhidden"
          >
            19th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            20
          </span>
          <span
            class="rdp-vhidden"
          >
            20th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            21
          </span>
          <span
            class="rdp-vhidden"
          >
            21st February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            22
          </span>
          <span
            class="rdp-vhidden"
          >
            22nd February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            23
          </span>
          <span
            class="rdp-vhidden"
          >
            23rd February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            24
          </span>
          <span
            class="rdp-vhidden"
          >
            24th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            25
          </span>
          <span
            class="rdp-vhidden"
          >
            25th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            26
          </span>
          <span
            class="rdp-vhidden"
          >
            26th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            27
          </span>
          <span
            class="rdp-vhidden"
          >
            27th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            28
          </span>
          <span
            class="rdp-vhidden"
          >
            28th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            29
          </span>
          <span
            class="rdp-vhidden"
          >
            29th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`when showing the week numbers should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <thead
    class="rdp-head"
  >
    <tr
      class="rdp-head_row"
    >
      <th
        class="rdp-head_cell"
        scope="col"
      />
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Su
        </span>
        <span
          class="rdp-vhidden"
        >
          Sunday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Mo
        </span>
        <span
          class="rdp-vhidden"
        >
          Monday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Tu
        </span>
        <span
          class="rdp-vhidden"
        >
          Tuesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          We
        </span>
        <span
          class="rdp-vhidden"
        >
          Wednesday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Th
        </span>
        <span
          class="rdp-vhidden"
        >
          Thursday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Fr
        </span>
        <span
          class="rdp-vhidden"
        >
          Friday
        </span>
      </th>
      <th
        class="rdp-head_cell"
        scope="col"
      >
        <span
          aria-hidden="true"
        >
          Sa
        </span>
        <span
          class="rdp-vhidden"
        >
          Saturday
        </span>
      </th>
    </tr>
  </thead>
  <tbody
    class="rdp-tbody"
  >
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          5
        </span>
      </td>
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      />
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            1
          </span>
          <span
            class="rdp-vhidden"
          >
            1st February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          6
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            2
          </span>
          <span
            class="rdp-vhidden"
          >
            2nd February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            3
          </span>
          <span
            class="rdp-vhidden"
          >
            3rd February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            4
          </span>
          <span
            class="rdp-vhidden"
          >
            4th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            5
          </span>
          <span
            class="rdp-vhidden"
          >
            5th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            6
          </span>
          <span
            class="rdp-vhidden"
          >
            6th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            7
          </span>
          <span
            class="rdp-vhidden"
          >
            7th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            8
          </span>
          <span
            class="rdp-vhidden"
          >
            8th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          7
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            9
          </span>
          <span
            class="rdp-vhidden"
          >
            9th February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            10
          </span>
          <span
            class="rdp-vhidden"
          >
            10th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            11
          </span>
          <span
            class="rdp-vhidden"
          >
            11th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            12
          </span>
          <span
            class="rdp-vhidden"
          >
            12th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            13
          </span>
          <span
            class="rdp-vhidden"
          >
            13th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            14
          </span>
          <span
            class="rdp-vhidden"
          >
            14th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            15
          </span>
          <span
            class="rdp-vhidden"
          >
            15th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          8
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            16
          </span>
          <span
            class="rdp-vhidden"
          >
            16th February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            17
          </span>
          <span
            class="rdp-vhidden"
          >
            17th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            18
          </span>
          <span
            class="rdp-vhidden"
          >
            18th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            19
          </span>
          <span
            class="rdp-vhidden"
          >
            19th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            20
          </span>
          <span
            class="rdp-vhidden"
          >
            20th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            21
          </span>
          <span
            class="rdp-vhidden"
          >
            21st February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            22
          </span>
          <span
            class="rdp-vhidden"
          >
            22nd February (Saturday)
          </span>
        </div>
      </td>
    </tr>
    <tr
      class="rdp-row"
    >
      <td
        class="rdp-cell"
      >
        <span
          class="rdp-weeknumber"
        >
          9
        </span>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            23
          </span>
          <span
            class="rdp-vhidden"
          >
            23rd February (Sunday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            24
          </span>
          <span
            class="rdp-vhidden"
          >
            24th February (Monday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            25
          </span>
          <span
            class="rdp-vhidden"
          >
            25th February (Tuesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            26
          </span>
          <span
            class="rdp-vhidden"
          >
            26th February (Wednesday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            27
          </span>
          <span
            class="rdp-vhidden"
          >
            27th February (Thursday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            28
          </span>
          <span
            class="rdp-vhidden"
          >
            28th February (Friday)
          </span>
        </div>
      </td>
      <td
        class="rdp-cell"
      >
        <div
          class="rdp-day"
        >
          <span
            aria-hidden="true"
          >
            29
          </span>
          <span
            class="rdp-vhidden"
          >
            29th February (Saturday)
          </span>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`when using custom components should render correctly 1`] = `
<table
  class="rdp-table"
  role="grid"
>
  <div>
    CustomHead 
  </div>
  <tbody
    class="rdp-tbody"
  >
    <div>
      CustomRow 
    </div>
    <div>
      CustomRow 
    </div>
    <div>
      CustomRow 
    </div>
    <div>
      CustomRow 
    </div>
    <div>
      CustomRow 
    </div>
  </tbody>
  <div>
    CustomFooter
  </div>
</table>
`;
